started login and registration, refactored structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  {{> head }}
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+    <title>{{title}}</title>
+  </head>
   <body>
     {{> header }}
-    <a class="link" href="./pages/login/index.html">Login</a>
+    <a class="link" href="./pages/login.html">Login</a>
   </body>
 </html>
