general main page styling

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/index.pcss" />
     <title>{{title}}</title>
   </head>
   <body>
-    <div class="error-container">
+    <div class="container_center">
       <h1>404</h1>
       <div>Не туда попали</div>
       <a href="../index.html">Назад к чатам</a>
