--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../styles/index.css" />
-    <title>{{title}}</title>
-  </head>
-  <body>
-    <body>
-      <div class="card">
-        <h1>Регистрация</h1>
-        <form class="form">
-          <label class="form__input">
-            Почта
-            <input/>
-          </label>
-          <label class="form__input">
-            Логин
-            <input/>
-          </label>
-          <label class="form__input">
-            Имя
-            <input/>
-          </label>
-          <label class="form__input">
-            Фамилия
-            <input/>
-          </label>
-          <label class="form__input">
-            Телефон
-            <input/>
-          </label>
-          <label class="form__input">
-            Пароль
-            <input/>
-          </label>
-          <label class="form__input">
-            Пароль (ещё раз)
-            <input/>
-          </label>
-          <button class="button_primary">Зарегистрироваться</button>
-          <a href="./login.html" class="link">Вход</a>
-        </form>
-      </div>
-    </body>
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" type="text/css" href="../styles/index.pcss"/>
+  <title>{{title}}</title>
+</head>
+<body>
+<div class="card">
+  <h1>Регистрация</h1>
+  <form class="form">
+    <label class="form__input">
+      Почта
+      <input/>
+    </label>
+    <label class="form__input">
+      Логин
+      <input/>
+    </label>
+    <label class="form__input">
+      Имя
+      <input/>
+    </label>
+    <label class="form__input">
+      Фамилия
+      <input/>
+    </label>
+    <label class="form__input">
+      Телефон
+      <input/>
+    </label>
+    <label class="form__input">
+      Пароль
+      <input/>
+    </label>
+    <label class="form__input">
+      Пароль (ещё раз)
+      <input/>
+    </label>
+    <button class="button_primary">Зарегистрироваться</button>
+    <a href="./login.html" class="link">Вход</a>
+  </form>
+</div>
+</body>
 </html>
