--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
-    <title>{{title}}</title>
-  </head>
-  <body>
-    {{> header }}
-    <a class="link" href="./pages/login.html">Login</a>
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" type="text/css" href="styles/index.pcss"/>
+  <title>{{title}}</title>
+</head>
+<body>
+<div class="raw-container">
+  <div class="chat-list">
+    <a href="./pages/settings.html" class="link">Профиль</a>
+    <div class="search">
+      <label for="search">Поиск</label>
+      <input id="search"/>
+    </div>
+    <div>{{> ChatItem}}</div>
+  </div>
+  <div class="chat">
+    <div class="chat-info">
+      <img class="chat-info__avatar" src="/avatar.png" alt="Avatar"/>
+      <p class="chat-info__name">Вадим</p>
+      <button class="chat-info__etc-button">etc</button>
+    </div>
+    <ul class="chat-thread">
+      <li class="chat-thread__date-separator">
+        <span>19 июня</span>
+      </li>
+      {{> Message }}
+    </ul>
+    <div class="message-controls">
+      <button class="message-controls__attach-button">Attach</button>
+      <label for="message" class="message-controls__input-label">Сообщение</label>
+      <input id="message" class="message-controls__input"/>
+      <button class="message-controls__send-button">Send</button>
+    </div>
+  </div>
+</div>
+</body>
 </html>
