--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../styles/index.css" />
-    <title>{{title}}</title>
-  </head>
-  <body>
-
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" type="text/css" href="../styles/index.pcss"/>
+  <title>{{title}}</title>
+</head>
+<body>
+<div class="page-wrapper">
+  <a class="back-button" href="../index.html"><img src="/avatar.png" alt="Стрелка назад"/></a>
+  <div class="settings">
+    <img class="settings__avatar" src="/avatar.png" alt="Avatar"/>
+    <h1 class="settings__login">Иван</h1>
+    <ul class="settings__section">
+      {{> SettingsItem label="Почта" value="pochta@yandex.ru" }}
+      {{> SettingsItem label="Логин" value="ivanivanov" }}
+      {{> SettingsItem label="Имя" value="Иван" }}
+      {{> SettingsItem label="Фамилия" value="Иванов" }}
+      {{> SettingsItem label="Имя в чате" value="Иван" }}
+      {{> SettingsItem label="Телефон" value="+7 (909) 967 30 30" }}
+    </ul>
+    <ul class="settings__section">
+      <li>
+        <a class="link">Изменить данные</a>
+      </li>
+      <li>
+        <a class="link">Изменить пароль</a>
+      </li>
+      <li>
+        <a class="link_alert">Выйти</a>
+      </li>
+    </ul>
+  </div>
+</div>
+</body>
 </html>
