main pge styling

--- a/src/pages/auth/login.html
+++ b/src/pages/auth/login.html
@@ -8,7 +8,7 @@
   <title>{{title}}</title>
 </head>
 <body>
-<div class="card">
+<main class="card">
   <h1>Вход</h1>
   <form class="form">
     <label class="form__input">
@@ -19,9 +19,9 @@
       Пароль
       <input name="password" type="password"/>
     </label>
-    <button class="button_primary">Авторизоваться</button>
+    <button class="button_primary" type="submit">Авторизоваться</button>
     <a href="register.html" class="link_centered">Нет аккаунта?</a>
   </form>
-</div>
+</main>
 </body>
 </html>
