--- a/src/pages/auth/register.html
+++ b/src/pages/auth/register.html
@@ -8,7 +8,7 @@
   <title>{{title}}</title>
 </head>
 <body>
-<div class="card">
+<main class="card">
   <h1>Регистрация</h1>
   <form class="form">
     <label class="form__input">
@@ -39,9 +39,9 @@
       Пароль (ещё раз)
       <input name="password_repeat" type="password"/>
     </label>
-    <button class="button_primary">Зарегистрироваться</button>
+    <button class="button_primary" type="submit">Зарегистрироваться</button>
     <a href="login.html" class="link_centered">Вход</a>
   </form>
-</div>
+</main>
 </body>
 </html>
