--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -12,24 +12,29 @@
 <body>
 <div class="raw-container">
 {{> ChatBrowser/ChatBrowser}}
-  <div class="chat">
+  <main class="chat">
     <div class="chat-info">
       <img class="chat-info__avatar" src="/avatar.png" alt="Avatar"/>
       <p class="chat-info__name">Вадим</p>
-      <button class="chat-info__etc-button">etc</button>
+      <button class="chat-info__etc-button"><img src="/etc.svg" alt="Еще"/></button>
     </div>
     <ul class="chat-thread">
       <li class="chat-thread__date-separator">
         <span>19 июня</span>
       </li>
       {{> Message/Message }}
+      {{> Message/Message }}
+      {{> Message/Message }}
+      {{> Message/Message }}
       <li class="chat-thread__date-separator">
-        <span>19 июня</span>
+        <span>20 июня</span>
       </li>
+      {{> Message/Message }}
+      {{> Message/Message }}
       {{> Message/Message }}
     </ul>
     {{> MessageControls/MessageControls}}
-  </div>
+  </main>
 </div>
 </body>
 </html>
