--- a/src/pages/error/404.html
+++ b/src/pages/error/404.html
@@ -8,10 +8,10 @@
   <title>{{title}}</title>
 </head>
 <body>
-<div class="container_center">
+<main class="container_center">
   <h1>404</h1>
   <p>Не туда попали</p>
-  <a href="../../index.html" class="link_centered">Назад к чатам</a>
-</div>
+  <a href="../main/main.html" class="link_centered">Назад к чатам</a>
+</main>
 </body>
 </html>
