--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="page-wrapper">
-  <a class="back-button" href="../../index.html"><img src="/avatar.png" alt="Стрелка назад"/></a>
-  <div class="profile">
+  <a class="back-button" href="../../index.html"><img src="/back.svg" alt="Стрелка назад"/></a>
+  <main class="profile">
     <img class="profile__avatar" src="/avatar.png" alt="Avatar"/>
     <h1 class="profile__login">Иван</h1>
     <ul class="profile__section">
@@ -25,16 +25,16 @@
     </ul>
     <ul class="profile__section">
       <li>
-        <a class="link">Изменить данные</a>
+        <a class="link" href="./settings.html">Изменить данные</a>
       </li>
       <li>
-        <a class="link">Изменить пароль</a>
+        <a class="link" href="./settings.html">Изменить пароль</a>
       </li>
       <li>
-        <a class="link_alert">Выйти</a>
+        <a class="link_alert" href="../auth/login.html">Выйти</a>
       </li>
     </ul>
-  </div>
+  </main>
 </div>
 </body>
 </html>
