Review fixes: added nav tags, changed lang

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -8,28 +8,30 @@
   <title>Index</title>
 </head>
 <body>
-<ul>
-  <li>
-    <a href="pages/main/main.html">Main</a>
-  </li>
-  <li>
-    <a href="pages/error/404.html">404</a>
-  </li>
-  <li>
-    <a href="pages/error/500.html">500</a>
-  </li>
-  <li>
-    <a href="pages/auth/login.html">Login</a>
-  </li>
-  <li>
-    <a href="pages/auth/register.html">Register</a>
-  </li>
-  <li>
-    <a href="pages/profile/profile.html">Profile</a>
-  </li>
-  <li>
-    <a href="pages/profile/settings.html">Settings</a>
-  </li>
-</ul>
+<nav>
+  <ul>
+    <li>
+      <a href="pages/main/main.html">Main</a>
+    </li>
+    <li>
+      <a href="pages/error/404.html">404</a>
+    </li>
+    <li>
+      <a href="pages/error/500.html">500</a>
+    </li>
+    <li>
+      <a href="pages/auth/login.html">Login</a>
+    </li>
+    <li>
+      <a href="pages/auth/register.html">Register</a>
+    </li>
+    <li>
+      <a href="pages/profile/profile.html">Profile</a>
+    </li>
+    <li>
+      <a href="pages/profile/settings.html">Settings</a>
+    </li>
+  </ul>
+</nav>
 </body>
 </html>
