--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -23,17 +23,19 @@
       {{> ProfileItem/ProfileItem label="Имя в чате" value="Иван" }}
       {{> ProfileItem/ProfileItem label="Телефон" value="+7 (909) 967 30 30" }}
     </ul>
-    <ul class="profile__section">
-      <li>
-        <a class="link" href="./settings.html">Изменить данные</a>
-      </li>
-      <li>
-        <a class="link" href="./settings.html">Изменить пароль</a>
-      </li>
-      <li>
-        <a class="link_alert" href="../auth/login.html">Выйти</a>
-      </li>
-    </ul>
+    <nav class="profile__nav">
+      <ul class="profile__section">
+        <li>
+          <a class="link" href="./settings.html">Изменить данные</a>
+        </li>
+        <li>
+          <a class="link" href="./settings.html">Изменить пароль</a>
+        </li>
+        <li>
+          <a class="link_alert" href="../auth/login.html">Выйти</a>
+        </li>
+      </ul>
+    </nav>
   </main>
 </div>
 </body>
