--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="./styles/index.pcss"/>
-  <link rel="stylesheet" type="text/css" href="widgets/auth.pcss"/>
+  <link rel="stylesheet" type="text/css" href="pages/LoginPage/loginPage.pcss"/>
   <title>Index</title>
 </head>
 <body>
