--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="./styles/index.pcss"/>
-  <link rel="stylesheet" type="text/css" href="pages/LoginPage/loginPage.pcss"/>
+  <link rel="stylesheet" type="text/css" href="styles/index.pcss"/>
   <title>Index</title>
 </head>
 <body>
